# ex2

./: CMakeLists.txt  README.md  details.txt  main.cpp  tester1.cpp  tester2.cpp
src/: BMArrayParserToMatrixes.cpp  BMArrayParserToMatrixes.hpp  BMArrayWithColorPattle.cpp  BMArrayWithColorPattle.hpp  BMPHeaderParser.cpp  BMPHeaderParser.hpp  BMPParser.cpp  BMPParser.hpp  BitMapArrayParser.cpp  BitMapArrayParser.hpp  BitmapHeaderParser.cpp  BitmapHeaderParser.hpp  CMakeLists.txt  Color.cpp  Color.hpp  ColorTableParser.cpp  ColorTableParser.hpp  DIBHeaderParser.cpp  DIBHeaderParser.hpp  ErrorCodeException.cpp  ErrorCodeException.hpp  Matrix.hpp  MatrixClass.cpp  MatrixClass.hpp  bmp_tester.cpp  bmp_tester.hpp  file_reading.cpp  file_reading.hpp
